[project]
name = "nonebot-plugin-eratw-mirror"
version = "0.1.1"
description = "Mirror GitGud eraTW updates to OneBot groups"
authors = [
    {name = "kusadact"},
]
license = {text = "MIT"}
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=2.1.3",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.6.0",
    "httpx>=0.25.0",
    "py7zr>=1.1.0",
    "dulwich>=1.2.6",
]
requires-python = ">=3.10"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.11.0"
default-groups = ["dev"]

[tool.uv.build-backend]
module-name = "nonebot_plugin_eratw_mirror"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
